<package>
  <name>barrett_hand_cs_ve_msgs</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <description>

    barrett_hand_cs_ve_msgs

  </description>
  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>common_interfaces</build_depend>
  <build_depend>velma_core_cs_ve_body_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>velma_core_cs_ve_body_msgs</run_depend>

</package>
